# ASE4156

./: .env-copy  .env-copy-test  .env.test  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  project.sql  report_generate.sh
.github/workflows/: main.yml
main/: client.cpp  env_util.hpp  http_client_util.cpp  http_client_util.hpp  server.cpp
postgresql/: db  db.cpp  db.hpp  server_test copy.cpp
postman-testing/: README.md  api_test.postman_collection.json
protos/: hello.proto
reports/: EndtoEnd_test_report.txt  static_analysis_report.txt  style_checker.txt  unit_test_report.txt
src/: CMakeCache.txt  client.cpp  main.cpp  server.cpp
src/api-endpoints/: Conversation.cpp  Conversation.h  Prompt.cpp  Prompt.h  Token.cpp  Token.h  User.cpp  User.h
src/config/: AppConfig.cpp  AppConfig.h  env_util.cpp  http_client_util.cpp  http_client_util.hpp
src/service/: Authenticator.cpp  Authenticator.h  ChatGPTService.cpp  ChatGPTService.h  IChatGPTService.h
static_analysis/: sa_output.txt
styler_checker/: run_cpplint.py  sc_command.sh
styler_checker/archive/reports/: client.txt  endpoints.txt  main.txt  server.txt
styler_checker/reports/: unit_test.txt
testing/: AppConfigTest.cpp  AuthenticatorTest.cpp  ChatGPTServiceTest.cpp  ConversationEndpointTest.cpp  EndtoEndTest.cpp  Makefile  MockChatGPTService.cpp  MockChatGPTService.h  PromptEndpointTest.cpp  test.cpp  unit_test.cpp  unit_test_report.txt
