load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_library(
    name = "shared_sources",
    srcs = glob([
        "src/**/*.cpp",
        "postgresql/*.cpp",
    ]),
    hdrs = glob([
        "src/**/*.h",
        "postgresql/*.h",
    ]),
    deps = [
    ],
    includes = [
        "src",
        "postgresql",
    ],
    copts = ["-std=c++17"],
)
cc_binary(
    name = "server",
    srcs = ["src/main.cpp"],
    deps = [
        ":shared_sources",
    ],
)
cc_test(
    name = "unit_test",
    srcs = glob([
        "testing/**/*.cpp",
    ]),
    deps = [
        ":shared_sources",
    ],
    copts = [
        "-fprofile-arcs",
        "-ftest-coverage",
    ],
    linkopts = [
        "-lgcov",
    ],
)
